# Sandbox.AngularWorkspace/projects/sandbox-app/src/app/billing/billing.routes.ts
@@ -1,0 +1,11 @@
+import { type Routes } from '@angular/router';
+
+export const billingRoutes: Routes = [
+	{
+		path: '',
+		loadComponent: () => import('@sandbox-app/billing/billing-overview/billing-overview'),
+		title: 'Billing Overview',
+	},
+];
+
+export default billingRoutes;
